--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -2,4 +2,4 @@
 <%= render 'form', review: @review %>
 
 <br>
-<%= link_to 'Back to Reservations', field_reservations(@reservation) %>
+<%= link_to 'Regresar a Mis Reservaciones', reservations_path %>
