--- a/app/views/reservations/show.html.erb
+++ b/app/views/reservations/show.html.erb
@@ -1,10 +1,7 @@
-<h1> Reseñas </h1>
+<h1> Reserva </h1>
 
 <%= @reservation.date_time %>
 
-<%= @reservation.reviews.each do |review| %>
-  <%= review.content %>
-<% end %>
-
+<%= link_to 'Cancelar reserva', reservations_path, method: :delete, data: {confirm: "Estas seguro de borrar?"} %>
 <%= link_to 'Index', fields_path %>
 <%= link_to 'Crear reseña', new_reservation_review_path(@reservation.id) %>
