de todo un poco

--- a/app/views/fields/_form_field.html.erb
+++ b/app/views/fields/_form_field.html.erb
@@ -3,5 +3,5 @@
   <%= f.input :address, placeholder: "Direccion" %>
   <%= f.input :phone_number, placeholder: "Numero de telefono" %>
   <%= f.input :availability, placeholder: "availability" %>
-  <%= f.submit "Agregar" %>
+  <%= f.submit "Guardar" %>
 <% end %>
