--- a/app/views/reservations/_form_reservations.html.erb
+++ b/app/views/reservations/_form_reservations.html.erb
@@ -1,5 +1,4 @@
 <%= simple_form_for [@field, @reservation] do |f| %>
   <%= f.input :date_time, placeholder: "Fecha" %>
-  <%# <%= f.input :time, placeholder: "hora" %>
-  <%= f.submit "Agregar" %>
+  <%= f.submit "Guardar" %>
 <% end %>
