--- a/app/views/fields/index.html.erb
+++ b/app/views/fields/index.html.erb
@@ -1,16 +1,16 @@
-<br>
-<br>
-<h1> Campos de futbol </h1>
-
-<ul>
+<div class = "container" >
+  <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://cdn.pixabay.com/photo/2017/08/10/01/38/grass-2616911_960_720.jpg)">
+  Canchas de futbol
+  </div>
   <% @fields.each do |field| %>
-    <li><%= link_to field.name, field_path(field) %>
-    <%= link_to 'Editar', edit_field_path(field.id) %>
-    <%= link_to 'Reservar', new_field_reservation_path(field.id) %>
-    </li>
+    <div class="card-product">
+      <img src="https://cdn.pixabay.com/photo/2020/01/12/16/57/stadium-4760441_960_720.jpg" />
+        <div class="card-product-infos">
+          <h2><%= link_to field.name, field_path(field) %></h2>
+          <p>Product description with <strong>relevant info</strong> only.</p>
+          <br>
+          <%= link_to 'Reservar', new_field_reservation_path(field.id), class: 'btn btn-primary btn-sm' %>
+        </div>
+    </div>
   <% end %>
-</ul>
-
-<br>
-<%= link_to 'Inicio', root_path %>
-<%= link_to 'Crear', new_field_path %>
+</div>
