--- a/app/views/fields/new.html.erb
+++ b/app/views/fields/new.html.erb
@@ -1,10 +1,11 @@
-<br>
-<br>
+<div class="container">
+  <br>
+  <br>
 
-<h2>Agrega tu campo de futbol</h2>
+  <h2>Agrega tu campo de futbol</h2>
 
-<%= render 'form_field', field: @field %>
+  <%= render 'form_field', field: @field %>
 
-<br>
-<%= link_to 'Inicio', root_path %>
-<%= link_to 'Index', fields_path %>
+  <br>
+  <%= link_to 'Buscar', fields_path, class: 'btn btn-primary' %>
+</div>
