--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,7 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
-
-<%= link_to 'Index', fields_path %>
+<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://cdn.pixabay.com/photo/2016/03/23/17/07/football-1275123_1280.jpg);">
+  <div class="container">
+    <h1>Bienvenidos a Pukllay!</h1>
+    <p>La manera mas simple de reservar tu cancha de futbol</p>
+    <%= link_to "Buscar", fields_path, class: "btn btn-flat" %>
+  </div>
+</div>
