--- a/app/views/reservations/index.html.erb
+++ b/app/views/reservations/index.html.erb
@@ -1,13 +1,12 @@
-<h1>Mis reservaciones</h1>
-<p> </p>
-
-<ul class="list_reservations">
-     <% @reservations.each do |reservation| %>
-          <li>
-            <%= link_to reservation.field.name, field_path(reservation.field.id) %>
-            <%= link_to "Tienes una reserva para #{reservation.date_time}", reservation_path(reservation)  %>
-          </li>
-        <% end %>
-</ul>
-
-<%= link_to "volver", fields_path, class: 'btn btn-primary' %> %>
+<div class="container">
+  <h2>Mis reservaciones</h2>
+    <% @reservations.each do |reservation| %>
+        <div class="card-product">
+        <div class="card-product-infos">
+          <h2><%= link_to reservation.field.name, field_path(reservation.field.id) %></h2>
+          <p><%= link_to "Tienes una reserva para #{reservation.date_time}", reservation_path(reservation)  %></p>
+        </div>
+      </div>
+    <% end %>
+  <%= link_to "Buscar", fields_path, class: 'btn btn-primary' %>
+</div>
