--- a/app/views/reservations/new.html.erb
+++ b/app/views/reservations/new.html.erb
@@ -1,4 +1,8 @@
-<h2>Agrega una reservación</h2>
-<%= render 'form_reservations', field: @field, reservation: @reservation %>
+<div class="container">
+  <h2>Agrega una reservación</h2>
+  <%= render 'form_reservations', field: @field, reservation: @reservation %>
 
-<br>
+  <br>
+  <%= link_to 'Mis Reservaciones', reservations_path, class: 'btn btn-primary' %>
+  <%= link_to 'Buscar', fields_path, class: 'btn btn-primary' %>
+</div>
