--- a/app/views/reservations/show.html.erb
+++ b/app/views/reservations/show.html.erb
@@ -1,7 +1,14 @@
-<h1> Reserva </h1>
+<div class="container">
+  <br>
+  <h1> Tu reserva </h1>
 
-<%= @reservation.date_time %>
+  <%= "Tu reserva es el #{@reservation.date_time}" %>
 
-<%= link_to 'Cancelar reserva', reservations_path, method: :delete, data: {confirm: "Estas seguro de borrar?"} %>
-<%= link_to 'Index', fields_path %>
-<%= link_to 'Crear reseña', new_reservation_review_path(@reservation.id) %>
+  <%= link_to "Editar", edit_reservation_path, class: 'btn btn-primary btn-sm'  %>
+  <%= link_to 'Cancelar reserva', reservation_path(@reservation), class: 'btn btn-primary btn-sm' , method: :delete, data: {confirm: "Estas seguro de borrar?"} %>
+
+  <br>
+  <br>
+  <%= link_to 'Crear reseña', new_reservation_review_path(@reservation.id), class: 'btn btn-primary btn-sm' %>
+  <%= link_to 'Buscar', fields_path, class: 'btn btn-primary btn-sm' %>
+</div>
