--- a/app/views/reservations/new.html.erb
+++ b/app/views/reservations/new.html.erb
@@ -4,5 +4,5 @@
 
   <br>
   <%= link_to 'Mis Reservaciones', reservations_path, class: 'btn btn-primary' %>
-  <%= link_to 'Buscar', fields_path, class: 'btn btn-primary' %>
+  <%= link_to 'Volver a todas las canchas', fields_path, class: 'btn btn-primary' %>
 </div>
