--- a/app/views/fields/show.html.erb
+++ b/app/views/fields/show.html.erb
@@ -21,9 +21,11 @@
       </div>
   </div>
   <div class="botones-centrados">
-   <% if policy(Field).create? %>
-        <%= link_to 'Editar', edit_field_path(@field.id), class: 'btn btn-primary' %>
-    <% end  %>
+  <% if user_signed_in? %>
+      <% if policy(Field).create? %>
+            <%= link_to 'Editar', edit_field_path(@field.id), class: 'btn btn-primary' %>
+      <% end  %>
+  <%end%>
         <%= link_to 'Volver', fields_path, id: "boton_azul", class: 'btn btn-primary' %>
     </div>
 </div>
