--- a/app/views/fields/edit.html.erb
+++ b/app/views/fields/edit.html.erb
@@ -7,5 +7,5 @@
   <%= render 'form_field', field: @field %>
 
   <br>
-  <%= link_to 'Buscar', fields_path, class: 'btn btn-primary' %>
+  <%#= link_to 'Buscar', fields_path, class: 'btn btn-primary' %>
 </div>
