--- a/app/views/fields/new.html.erb
+++ b/app/views/fields/new.html.erb
@@ -1,11 +1,7 @@
 <div class="container">
   <br>
-  <br>
 
-  <h2>Agrega tu campo de futbol</h2>
+  <h2>Agrega tu campo de fútbol</h2>
 
   <%= render 'form_field', field: @field %>
-
-  <br>
-  <%= link_to 'Buscar', fields_path, class: 'btn btn-primary' %>
 </div>
