--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,4 @@
-<h2>Sign up</h2>
+<h2>Registro</h2>
 
 <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= f.error_notification %>
@@ -7,11 +7,7 @@
     <%= f.input :full_name,
                 required: true,
                 autofocus: true,
-                input_html: { autocomplete: "full name" }%>
-    <%= f.input :phone_number,
-                required: true,
-                autofocus: true,
-                input_html: { autocomplete: "phone number" }%>
+                input_html: { autocomplete: "nombre completo" }%>
     <%= f.input :role,
                 required: true,
                 autofocus: true,
@@ -27,10 +23,14 @@
     <%= f.input :password_confirmation,
                 required: true,
                 input_html: { autocomplete: "new-password" } %>
+    <%= f.input :avatar,
+                required: true,
+                autofocus: true,
+                input_html: { autocomplete: "avatar" }%>
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit, "Sign up" %>
+    <%= f.button :submit, "Crear cuenta" %>
   </div>
 <% end %>
 
