--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -6,10 +6,9 @@
   font-weight: lighter;
   opacity: 0.6;
   transition: opacity 0.3s ease;
-}
-
-.btn-ghost:hover {
-  opacity: 1;
+    :hover {
+      opacity: 1;
+    }
 }
 
 .btn-flat {
@@ -49,4 +48,20 @@
 
 #boton_azul {
   margin-left: 10px;
+}
+
+#boton_principal {
+  background-color: $gray-claro;
+  border: 1px solid $green-apple;
+  width: 150px;
+}
+
+.btn-default{
+  background-color:#a7d129ea;
+  border-color:  #a7d129;
+  color: rgb(10, 7, 48);
+    &:hover {
+      background-color:#5b5656a9;
+      color: white;
+    }
 }
