--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,12 +1,11 @@
 .navbar-lewagon {
   justify-content: space-between;
-  background: white;
-}
-
-.navbar-lewagon .navbar-collapse {
-  flex-grow: 0;
-}
-
-.navbar-lewagon .navbar-brand img {
-  width: 40px;
+  background: $main-gray;
+  border-bottom: 0.3px solid #beff9985;
+    .navbar-collapse {
+      flex-grow: 0;
+    }
+    .navbar-brand img {
+      width: 40px;
+    }
 }
