--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -8,3 +8,7 @@ $orange: #E67E22;
 $green: #1EDD88;
 $gray: #0E0000;
 $light-gray: #F4F4F4;
+$main-gray: #29252C;
+$white: #F5EAEA;
+$green-apple: #A7D129;
+$gray-claro: #5b5656d5;
