--- a/app/views/fields/index.html.erb
+++ b/app/views/fields/index.html.erb
@@ -9,7 +9,7 @@
           <h2><%= link_to field.name, field_path(field) %></h2>
           <p>Product description with <strong>relevant info</strong> only.</p>
           <br>
-          <%= link_to 'Reservar', new_field_reservation_path(field.id), class: 'btn btn-primary btn-sm' %>
+          <%= link_to 'Reservar', new_field_reservation_path(field.id), class: 'btn btn-default' %>
         </div>
     </div>
   <% end %>
