--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,34 @@
-<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://cdn.pixabay.com/photo/2016/03/23/17/07/football-1275123_1280.jpg);">
-  <div class="container">
-    <h1>Bienvenidos a Pukllay!</h1>
-    <p>La manera mas simple de reservar tu cancha de futbol</p>
-    <%= link_to "Buscar", fields_path, class: "btn btn-flat" %>
+
+  <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://cdn.pixabay.com/photo/2016/03/23/17/07/football-1275123_1280.jpg);">
+    <div class="container">
+      <h1>Bienvenidos a Pukllay!</h1>
+      <p>La manera mas simple de reservar tu cancha de futbol</p>
+      <%= link_to "Buscar", fields_path, class: "btn btn-flat", id: "boton_principal" %>
+    </div>
   </div>
-</div>
+
+  <div class="container-card">
+    <div class="card-1">
+    <div class="card-2">
+        <h2 class="title"> Busca </h2>
+        <p> Elegi la cancha que mas te guste </p>
+      </div>
+    </div>
+      <div class="card-1">
+        <div class="card-2">
+            <h2 class="title"> Busca </h2>
+          <p> Elegi la cancha que mas te guste </p>
+        </div>
+    </div>
+      <div class="card-1">
+        <div class="card-2">
+        <h2 class="title"> Busca </h2>
+        <p> Elegi la cancha que mas te guste </p>
+      </div>
+    </div>
+  </div>
+
+  <footer>
+    <h4> Contacto <h4> <br>
+  <p> Pukllay@pukllay.com </p>
+  </footer>
