--- a/app/assets/stylesheets/components/_card_product.scss
+++ b/app/assets/stylesheets/components/_card_product.scss
@@ -1,33 +1,36 @@
-.card-product {
-  overflow: hidden;
-  height: 120px;
-  background: white;
-  box-shadow: 0 0 15px rgba(255, 255, 255, 0.452);
-  display: flex;
-  align-items: center;
-  margin-bottom: 15px;
+.grid{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  // grid-gap: 10px;
 }
+  .card-product{
+    overflow: hidden;
+    height: 120px;
+    // width: 400px;
+    background-color: white;
+    box-shadow: 0 0 15px rgba(85, 85, 85, 0.452);
+    display: flex;
+    align-items: center;
+    // margin-bottom: 15px;
 
-.card-product img {
-  height: 100%;
-  width: 120px;
-  object-fit: cover;
-}
-
-.card-product h2 {
-  font-size: 16px;
-  font-weight: bold;
-  margin: 0;
-}
-
-.card-product p {
-  font-size: 12px;
-  line-height: 1.4;
-  opacity: .7;
-  margin-bottom: 0;
-  margin-top: 8px;
-}
-
-.card-product .card-product-infos {
-  padding: 16px;
+    img{
+      height: 100%;
+      width: 120px;
+      object-fit: cover;
+    }
+    h2{
+      font-size: 16px;
+      font-weight: bold;
+      margin: 0;
+    }
+    p{
+      font-size: 12px;
+      line-height: 1.4;
+      opacity: .7;
+      margin-bottom: 0;
+      margin-top: 8px;
+    }
+    .card-product-infos{
+      padding: 16px;
+    }
 }
