--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,28 +1,34 @@
 // Specific CSS for your home-page
-body{
- font-family: $body-font;
+.body-color {
+  font-family: $body-font;
+  background-color: $main-gray;
 }
-h1{
+
+h1 {
   font-family: $body-font;
 }
 
 
-.container-card{
+.container-card {
   margin: 50px;
   display: flex;
   justify-content: space-around;
-  .card-1{
+
+  .card-1 {
     display: flex;
     justify-content: center;
-    border: 1px solid #2F2F2F;;
+    border: 1px solid #2F2F2F;
+    ;
     padding: 40px;
-    background-color:#0000009c;
+    background-color: #0000009c;
     box-shadow: 0px 6px 15px rgba(177, 177, 177, 0.308);
-    .card-2{
-      color: rgb(255, 255, 255) ;
-       .title{
-         margin-left: 70px;
-       }
+
+    .card-2 {
+      color: rgb(255, 255, 255);
+
+      .title {
+        margin-left: 70px;
+      }
     }
   }
 }
