--- a/app/views/reservations/index.html.erb
+++ b/app/views/reservations/index.html.erb
@@ -1,13 +1,18 @@
 <br>
 <div class="container">
   <h2>Mis reservaciones</h2>
-    <% @reservations.each do |reservation| %>
-        <div class="card-product">
-        <div class="card-product-infos">
-          <h2><%= link_to reservation.field.name, field_path(reservation.field.id) %></h2>
-          <p><%= link_to "Tienes una reserva el #{localize reservation.date_time, format: "%d de %B %Y a las %H h"}", reservation_path(reservation)  %></p>
-        </div>
-      </div>
-    <% end %>
-  <%= link_to "Buscar", fields_path, class: 'btn btn-primary' %>
+  <% @reservations.each do |reservation| %>
+  <ul class="list-group list-group-flush">
+    <li class="list-group-item">
+      <h3><%= link_to reservation.field.name, field_path(reservation.field.id) %></h3>
+      <p>
+        <%= link_to "Ver detalles de mi reserva", reservation_path(reservation)  %>
+      </p>
+    </li>
+  </ul>
+  <% end %>
+  <br>
+  <%= link_to "Volver a todas las canchas", fields_path, class: 'btn btn-primary' %>
 </div>
+
+        <%# linea 9 = link_to "Tienes una reserva el #{localize reservation.date_time, format: "%d de %B %Y a las %H h"}", reservation_path(reservation)  %>
