--- a/app/views/reservations/show.html.erb
+++ b/app/views/reservations/show.html.erb
@@ -1,14 +1,18 @@
 <div class="container">
   <br>
-  <h1> Tu reserva </h1>
+  <h2> Tu reserva </h2>
 
-  <%= "Tu reserva es el #{localize @reservation.date_time, format: "%d de %B %Y a las %H h"}" %>
-  <%= link_to "Editar", edit_reservation_path, class: 'btn btn-primary btn-sm' %>
+  <%= "Tu reserva en el #{@reservation.field.name} está programada para el #{localize @reservation.date_time, format: "%d de %B %Y a las %H h"}" %>
+  <br>
+  <%= "Dirección: #{@reservation.field.address}" %>
 
-  <%= link_to 'Cancelar reserva', reservation_path(@reservation), class: 'btn btn-primary btn-sm' , method: :delete, data: {confirm: "Estas seguro de borrar?"} %>
+  <br>
+  <br>
 
+  <%= link_to "Editar", edit_reservation_path, id:"edit-show", class: 'btn btn-primary btn-sm' %>
+  <%= link_to 'Cancelar reserva', reservation_path(@reservation), id:"cancel-show", class: 'btn btn-primary btn-sm' , method: :delete, data: {confirm: "Estas seguro de borrar?"} %>
   <br>
   <br>
   <%= link_to 'Crear reseña', new_reservation_review_path(@reservation.id), class: 'btn btn-primary btn-sm' %>
-  <%= link_to 'Volver a todas las canchas', fields_path, class: 'btn btn-primary btn-sm' %>
+  <%= link_to 'Volver a mis reservaciones', reservations_path, class: 'btn btn-primary btn-sm' %>
 </div>
