--- a/app/views/reservations/index.html.erb
+++ b/app/views/reservations/index.html.erb
@@ -1,18 +1,17 @@
-<br>
 <div class="container">
-  <h2>Mis reservaciones</h2>
-  <% @reservations.each do |reservation| %>
-  <ul class="list-group list-group-flush">
-    <li class="list-group-item">
-      <h3><%= link_to reservation.field.name, field_path(reservation.field.id) %></h3>
-      <p>
-        <%= link_to "Ver detalles de mi reserva", reservation_path(reservation)  %>
-      </p>
-    </li>
-  </ul>
-  <% end %>
+  <div class="row">
+    <div class="col-sm-6">
+      <% @reservations.each do |reservation| %>
+      <div class="card mt-3">
+        <div class="card-body">
+          <h5 class="card-title"><%="#{reservation.field.name}"%></h5>
+          <p class="card-text"><%="#{reservation.field.description}"%></p>
+          <%= link_to "Ver detalles de mi reserva", reservation_path(reservation), class: 'btn btn-dark'  %>
+        </div>
+      </div>
+      <% end %>
+    </div>
+  </div>
   <br>
-  <%= link_to "Volver a todas las canchas", fields_path, class: 'btn btn-primary' %>
+  <%= link_to "Volver a todas las canchas", fields_path, class: 'btn btn-default' %>
 </div>
-
-        <%# linea 9 = link_to "Tienes una reserva el #{localize reservation.date_time, format: "%d de %B %Y a las %H h"}", reservation_path(reservation)  %>
