--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -50,7 +50,7 @@
   margin-left: 10px;
 }
 
-#boton_principal {
+.boton_principal {
   background-color: $gray-claro;
   border: 1px solid $green-apple;
   width: 150px;
