--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<body class= "body-color">
+<div class= "body-color">
   <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://cdn.pixabay.com/photo/2016/03/23/17/07/football-1275123_1280.jpg);">
     <div class="container-bienvenida">
       <h1>Bienvenidos a Pukllay!</h1>
@@ -28,8 +28,10 @@
     </div>
   </div>
 
-  <footer>
-    <h4> Contacto <h4> <br>
-  <p> Pukllay@pukllay.com </p>
-  </footer>
-</body>
+  <div class= "footer">
+          <a href="#" target="blank"><i class="fab fa-facebook-f"></i></a>
+            <a href="#" target="blank"> <i class="fab fa-github"></i></a>
+            <a href="#"target="blank"> <i class="fab fa-instagram"></i></a>
+            <p> Servicios YA ❤  </p>
+  </div>
+</div>
