--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -2,6 +2,8 @@
 .body-color {
   font-family: $body-font;
   background-color: $main-gray;
+  height: 100%;
+  width: 100%;
 }
 
 h1 {
@@ -18,10 +20,10 @@ h1 {
     display: flex;
     justify-content: center;
     border: 1px solid #2F2F2F;
-    ;
     padding: 40px;
     background-color: #0000009c;
     box-shadow: 0px 6px 15px rgba(177, 177, 177, 0.308);
+    margin-bottom: 100px;
 
     .card-2 {
       color: rgb(255, 255, 255);
