--- a/app/views/fields/new.html.erb
+++ b/app/views/fields/new.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <br>
-
-  <h2>Agrega tu campo de fútbol</h2>
-
-  <%= render 'form_field', field: @field %>
+  <div class="titulo col-4 row justify-content-center" style="margin: 0 auto">
+    <h2>Agrega tu campo de fútbol</h2>
+  </div>
+    <%= render 'form_field', field: @field %>
 </div>
