--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -16,14 +16,14 @@
     </div>
       <div class="card-1">
         <div class="card-2">
-            <h2 class="title"> Busca </h2>
-          <p> Elegi la cancha que mas te guste </p>
+            <h2 class="title"> Reserva </h2>
+          <p> Selecciona tu dia y horario </p>
         </div>
     </div>
       <div class="card-1">
         <div class="card-2">
-        <h2 class="title"> Busca </h2>
-        <p> Elegi la cancha que mas te guste </p>
+        <h2 class="title"> Juga </h2>
+        <p> Juntate con tus amigos en nuestras canchas </p>
       </div>
     </div>
   </div>
