--- a/app/views/reservations/edit.html.erb
+++ b/app/views/reservations/edit.html.erb
@@ -2,4 +2,4 @@
 <%= render 'form_reservations', reservation: @reservation %>
 
 <br>
-<%= link_to 'Mis reservaciones', reservations_path, class: 'btn btn-primary' %>
+<%= link_to 'Mis reservaciones', reservations_path, class: 'btn btn-default' %>
