--- a/app/views/reservations/index.html.erb
+++ b/app/views/reservations/index.html.erb
@@ -9,5 +9,5 @@
         </div>
       </div>
     <% end %>
-  <%= link_to "Buscar", fields_path, class: 'btn btn-primary' %>
+  <%= link_to "Buscar", fields_path, class: 'btn btn-default' %>
 </div>
