--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -4,6 +4,6 @@
   <%= render 'form', review: @review %>
 
   <br>
-  <%= link_to 'Mis Reservaciones', reservations_path, class: 'btn btn-primary btn-sm' %>
-  <%= link_to 'Buscar', fields_path, class: 'btn btn-primary btn-sm' %>
+  <%= link_to 'Mis Reservaciones', reservations_path, class: 'btn btn-default' %>
+  <%= link_to 'Buscar', fields_path, class: 'btn btn-default' %>
 </div>
