--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,37 +1,39 @@
-<h2>Registro</h2>
+<div class="container">
+  <div class="row col-4 row justify-content-center"
+    <div class="form-inputs">
+      <h2>Registro</h2>
+       <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+      <%= f.error_notification %>
+      <%= f.input :full_name,
+                  required: true,
+                  autofocus: true,
+                  input_html: { autocomplete: "nombre completo" }%>
+      <%= f.input :role,
+                  required: true,
+                  autofocus: true,
+                  collection: ["owner", "player"],
+                  prompt: "Tipo de usuario",
+                  input_html: { autocomplete: "role" }%>
+      <%= f.input :email,
+                  required: true,
+                  autofocus: true,
+                  input_html: { autocomplete: "email" }%>
+      <%= f.input :password,
+                  required: true,
+                  hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
+                  input_html: { autocomplete: "new-password" } %>
+      <%= f.input :password_confirmation,
+                  required: true,
+                  input_html: { autocomplete: "new-password" } %>
+      <%= f.input :avatar,
+                  required: true,
+                  autofocus: true,
+                  input_html: { autocomplete: "avatar" }%>
+    </div>
 
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= f.error_notification %>
+    <div class="form-actions">
+      <%= f.button :submit, "Crear cuenta", class: "btn btn-default" %>
+    </div>
+  <% end %>
 
-  <div class="form-inputs">
-    <%= f.input :full_name,
-                required: true,
-                autofocus: true,
-                input_html: { autocomplete: "nombre completo" }%>
-    <%= f.input :role,
-                required: true,
-                autofocus: true,
-                input_html: { autocomplete: "role" }%>
-    <%= f.input :email,
-                required: true,
-                autofocus: true,
-                input_html: { autocomplete: "email" }%>
-    <%= f.input :password,
-                required: true,
-                hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
-                input_html: { autocomplete: "new-password" } %>
-    <%= f.input :password_confirmation,
-                required: true,
-                input_html: { autocomplete: "new-password" } %>
-    <%= f.input :avatar,
-                required: true,
-                autofocus: true,
-                input_html: { autocomplete: "avatar" }%>
-  </div>
-
-  <div class="form-actions">
-    <%= f.button :submit, "Crear cuenta" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
