--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -1,5 +1,7 @@
-<%= simple_form_for [@reservation, @review] do |f| %>
-  <%= f.input :content, placeholder: "Escribe tu reseña aquí" %>
-  <%= f.input :rating, placeholder: "Agrega un rating (1-5)" %>
-  <%= f.submit "Agregar reseña" %>
-<% end %>
+<div class="container col-4">
+  <%= simple_form_for [@reservation, @review] do |f| %>
+    <%= f.input :content, placeholder: "Escribe tu reseña aquí" %>
+    <%= f.input :rating, collection: 1..5, prompt: "Agrega un rating" %>
+    <%= f.submit "Agregar reseña", class: 'btn btn-default'%>
+  <% end %>
+</div>
