--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="row col-4 row justify-content-center"
+  <div class="row col-4 row justify-content-center">
     <div class="form-inputs">
       <h2>Registro</h2>
        <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
@@ -35,5 +35,5 @@
       <%= f.button :submit, "Crear cuenta", class: "btn btn-default" %>
     </div>
   <% end %>
-
+<%= render "devise/shared/links" %>
 </div>
